# Credit-Operating-System

./: .coverage  .dockerignore  .fallow-dupes-baseline.json  .fallowrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .impeccable.md  AGENTS.md  ARCHITECTURE_REVIEW_BRIEF.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  SECTOR_RV_HANDOFF.md  audit-backlog.md  audit-log.md  audit_report.md  fallow-cleanup-log.md  pytest.ini  qa_master_tracker.md  ruff.toml  run_sec_audit.py  skills-lock.json
.agent-reviews/: adversarial-all-surfaces-redesign-2026-07-13.md  adversarial-codebase-tournament.md  adversarial-final-code.md  adversarial-workbench-atlas-2026-07-13.md  code-review-handoff.md  design-rebuild-handoff.md  impeccable-assessment-a-2026-07-13.md  impeccable-assessment-b-2026-07-13.md  impeccable-final-2026-07-13.md  impeccable-remaining-surfaces-release-2026-07-13.md  redteam.md  remaining-surfaces-feature-parity-2026-07-13.md  skills-audit.md  src-security-audit-brief.md
.claude/: launch.json  settings.json
.codex/: hooks.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: dependabot.yml
.impeccable/: design.json
DESIGN-IS-2026-07-19/: 00-scope.md  01-evidence.md  02-scorecard.md  03-verdict.md  04-handoff-prompt.md  05-all-faults-and-personas.md  06-remediation-ledger.md
caos/: .dockerignore  .env.example  README.md  databricks.yml  demo_mock_backend.py  docker-compose.yml
caos/mcp/edgar/: README.md  pyproject.toml  server.py
reports/: 2026-06-15-roadmap-consolidation-review.md  2026-06-18-claude-code-toolkit-plugin-review.md  (+3 more)
(+2572 files in other folders)
