[project]
name = "caos-edgar-mcp"
version = "0.1.0"
description = "MCP server exposing the CAOS free SEC EDGAR covenant-retrieval lane to agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
caos-edgar-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
